fix align subtitle

--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@
 
 .subtitle {
   max-width: 770px;
-  margin: 20px 0 0;
+  margin: 20px auto 0;
   text-align: center;
 }
 
